--- a/cabal-nirvana.cabal
+++ b/cabal-nirvana.cabal
@@ -1,5 +1,5 @@
 Name:                cabal-nirvana
-Version:             0.2
+Version:             0.2.1
 Synopsis:            Avoid Cabal dependency hell by constraining to known good versions.
 Description:         This tool takes a list of known compatible versions of libraries and forces them to be used. This should bypass a lot of cabal dependency hell, thereby inducing nirvana.
                      .
@@ -34,6 +34,7 @@ Executable cabal-nirvana
                      , directory
                      , tar >= 0.4 && < 0.5
                      , bytestring
+  Other-modules:     Paths_cabal_nirvana
 
 Executable cabal-nirvana-generate
   Main-is:             generate.hs
